# fintran

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  architecture.archimate  main.py  pre-commit-config.yaml  pyproject.toml  update_architecture.py
.hypothesis/constants/: 1a8da65078e85935  286f1679f21f6ee8  42c49f7a9c712d52  9c3034339d41ca68  d8cf8422779234b1  dc32609183bd47a3  e98d63af272d435c
.hypothesis/examples/04e6b3400353b141/: c14d8aaf60d49998
.kiro/settings/: mcp.json
.kiro/specs/: development.md  use-cases.md
.kiro/specs/cli-interface/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/core-infrastructure/: design.md  requirements.md  tasks.md
.kiro/specs/data-validation-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: architecture.md  context7-libraries.md  libraries.md
docs/: c4-component.md  c4-container.md  c4-context.md
examples/: custom_validator_example.py
fintran/: __init__.py  __main__.py
fintran/cli/: __init__.py  app.py  commands.py  config.py  exit_codes.py  output.py  registry.py
fintran/core/: __init__.py  exceptions.py  pipeline.py  protocols.py  schema.py
fintran/readers/: __init__.py
fintran/transforms/: __init__.py
fintran/validation/: __init__.py  custom.py  declarative.py  exceptions.py  pipeline.py  protocols.py  report.py  result.py  transform.py
fintran/validation/business/: __init__.py  amounts.py  currency.py  (+1 more)
fintran/writers/: __init__.py
tests/: __init__.py  conftest.py  coverage-report.md  test_error_conditions.py  test_exceptions.py  test_pipeline.py  test_pipeline_properties.py  test_schema.py  test_schema_properties.py  test_transform_determinism.py  test_transform_invariants.py
tests/cli/: test_batch_command.py  test_config_properties.py  test_convert_properties.py  test_error_handling_properties.py  test_logging_properties.py  test_output_properties.py  test_registry_properties.py  test_validate_inspect_properties.py
tests/validation/: conftest.py  test_custom_helpers.py  test_declarative.py  test_declarative_yaml.py  test_edge_cases.py  test_performance_properties.py  test_report_properties.py  test_transform_properties.py  test_validator_properties.py
(+9 files in other folders)
